# batFramework

./: .bumpversion.cfg  .gitignore  404.html  CHANGELOG.md  CNAME  LICENCE  LICENSE  README.md  animated_sprite.py  button.py  camera.py  color.py  entitiy.py  index.html  interactive_entity.py  label.py  lib.py  manifest.json  pyproject.toml  render_surface.py  scene.py  scene_manager.py  service-worker.js  sitemap.xml  sw.js  sw.js.map  toggle.py  transition.py  tree_container.py  update_version.py
.github/workflows/: main.yml  prerelease.yml  publish.yml  publish_dev.yml  publish_master.yml  release.yml
assets/css/: styles.153a413e.css
assets/js/: 01a85c17.71d5161a.js  0e1d9cdf.de62a316.js  0e384e19.392b8a50.js  118e7389.4bb2e9f8.js  125e3e3a.7aec3944.js  14eb3368.35d6723d.js  1772.383dc6a2.js  17896441.600fc81c.js  (+60 more)
batFramework/: __init__.py  action.py  actionContainer.py  anchor.py  animatedSprite.py  audioManager.py  camera.py  constants.py  cutscene.py  cutsceneBlocks.py  debugger.py  easing.py  entity.py  game_manager.py  lib.py  manager.py  particles.py  scene.py  sceneManager.py  stateMachine.py  time.py  transition.py  triggerZone.py  utils.py
blog/: atom.xml  index.html  rss.xml
gamejam/: baby.py  bootScene.py  custom_scenes.py  cutscenes.py  dialogueScene.py  editorScene.py  gameScene.py  game_constants.py  level.py  main.py  myManager.py  optionsScene.py  player.py  tileInspectorScene.py  tilePicker.py  titleScene.py
markdown-page/: index.html
project/: editorScene.py  game_constants.py  level.py  main.py  mainScene.py  myManager.py  optionScene.py  player.py  titleScene.py
src/: game_manager.py  gui_container.py
(+148 files in other folders)
