[build-system]
requires = ["setuptools==76.1.0 "]
build-backend = "setuptools.build_meta"
[project]
name = "batframework"
description = "Pygame framework for making games easier."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pygame-ce"]
version = "1.0.8"
license = { file = "LICENSE" }
